k8s/apps/argocd/overlays/235-prod/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: "envoy.k8s.235.tdude.co"
spec:
  parentRefs:
  - name: envoy-gateway # Reference your Gateway resource
    namespace: envoy-gateway  # Replace with the namespace of your Gateway
  hostnames:
  - gitops.235.tdude.co
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: argocd-server
      namespace: argocd
      port: 443 # Match the "https" port specified in your service
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: disable-oidc-for-unprotected
  namespace: argocd
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: argocd-server
  # No OIDC block here—this means no OIDC authentication will be applied to this route.
